<resources>
    <string name="title">ThinKarbon</string>
    <string name="main_screen_title">Carbon Footprint</string>
    <string name="transport_screen_title">Transport Emissions</string>
    <string name="home_energy_title">Home Energy Emissions</string>
    <string name="food_title">Food Emissions</string>
    <string name="app_name">ThinKarbon</string>
    <string name="chooseItem">Personal Vehicle</string>
    <string name="your_total_emissions">Today\'s Total Emission</string>
    <string name="textInCircle">10 lbs CO2e</string>
    <string name="tvDistance">Distance: </string>
    <string name="tvDate">Date: </string>
    <string name="typeEnergy">Type of Energy:</string>
    <string name="amountEnergy">Amount:</string>

    <!-- Activity titles -->
    <string name="homeEnergyTitle">Home Energy</string>
    <string name="publicTransportTitle">Public Transport</string>
    <string name="vehicleTitle">Personal Vehicle</string>

    <!-- Buttons -->
    <string name="btnGo">Done</string>
    <string name="btnStartTracking">Start</string>
    <string name="btnStopTracking">Stop</string>


    <!-- Spinner Energy Activity -->
    <string-array name="energy_types">
        <item>Electricity</item>
        <item>Natural Gas</item>
        <item>Oil</item>
    </string-array>


    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Map strings -->
    <string name="start_marker">Start Point</string>
    <string name="end_marker">End Point</string>
    <string name="coordinate_marker">Rout Point</string>
    <string name="mark_info_window_title">What were you on here?</string>

    <string name="foot">On foot</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="bicycle">Bicycle</string>
    <string name="other">Other</string>

    <!-- Spinner for the marker bubble -->
    <string-array name="transport_types">
        <item>@string/foot</item>
        <item>@string/car</item>
        <item>@string/bus</item>
        <item>@string/bicycle</item>
        <item>@string/other</item>
    </string-array>

    <string name="requires_location_storage">ThinKarbon requires location and storage access in order to function. Please allow these in Settings > App > ThinKarbon > Permissions</string>
    <string name="ask_calculate_emissions">Calculate emissions for this route?</string>
    <string name="foodType">Food type:</string>
    <string name="quantity">Quantity:</string>
    <string name="navbar_food">Food</string>
    <string name="navbar_transport">Transport</string>
    <string name="navbar_home">home</string>
    <string name="navbar_energy">Energy</string>
    <string name="settings_about_thinkarbon">What is ThinKarbon?</string>
    <string name="about_thinkarbon_text">
        \u2022 In the past few years we have seen the effects of climate change and global warming
        on our planet mainly caused by excessive emissions of greenhouse gases of which CO2. \n\n
        \u2022 The only to way fight this, is if each individual takes action. ThinKarbon allows you to track
        your emissions generated from the transport you use and food you consume. \n\n
        \u2022 Head hover to the main screen and hit the help button to find out ways to combat this global issue.
        \u2022 Please note that the calculations are based on an estimate.
    </string>

    <string name="help_meat_text">\u2022 Eating meat contributes considerably to greenhouse gases. In fact 51% of greenhouse gas emissions are derived from
        livestock and their byproducts. A plant base diet cuts your carbon footprint by 50%! \n
        \u2022 Take a look at this <a href="https://www.cowspiracy.com/infographic">infographic</a> by Cowspiracy for more facts.</string>

    <string name="help_transport_text">\u2022 Try driving less and using public transport instead. Take your bicycle for a good spin and reduce your carbon emissions while getting some exercise!\n
        \u2022 Figures show that the average person will lose 13 lbs (5.8 kilograms) in their first year of cycling to work (Source: Outdoor Foundation 2010).</string>

    <string name="offset_text">You can offset your carbon emissions with <a href="https://carbonfund.org/carbon-offsets/">carbonfund.org!</a></string>

    <string name="help_transport_title">Transport</string>

    <string name="reduce_emissions">How to reduce emissions</string>
    <string name="settings_type_of_fuel">Fuel Type</string>
    <string name="settings_country">Country</string>
    <string name="navbar_settings">Settings</string>
    <string name="terms_and_conditions"><a href="https://raw.githubusercontent.com/oliva20/thinkarbon_app/master/LICENSE">Terms and Conditions</a></string>

    <!--    Preferences  -->
    <string-array name="countries">
        <item>United Kingdom</item>
        <item>Portugal</item>
        <item>Italy</item>
    </string-array>

    <string-array name="fuelType" >
        <item>Gasoline</item>
        <item>Diesel</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="main_screen_lower_emissions" >You can lower your emissions!</string>
    <string name="btn_get_help">How?</string>

    <!-- Keys -->
    <string name="countryKey" >com.example.offsetcalculator.country</string>
    <string name="fuelKey" >com.example.offsetcalculator.fuel</string>
    <string name="settings_title">Settings</string>
    <string name="help_meat_title">Meat consumption</string>
</resources>
