<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/meat_title"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_meat_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_margin="9dp"/>

        <TextView
            android:layout_below="@+id/meat_title"
            android:id="@+id/meat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_meat_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/transport_reduce_title"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:layout_below="@+id/meat_text"
            android:text="@string/help_transport_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/transport_reduce_text"
            android:layout_below="@+id/transport_reduce_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_transport_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <TextView
            android:layout_below="@+id/transport_reduce_text"
            android:id="@+id/offset_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offset_text"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:padding="5dp"/>

    </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>